// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgressBar > renders correctly when value < 0 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  overflow: hidden;
  position: relative;
  height: 0.25rem;
  margin-left: 0;
  margin-right: 0;
  border-radius: 0.25rem;
  background-color: #e9eaeb;
  width: 100%;
}

.emotion-4 {
  border-radius: 0.25rem;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #8c40ef;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 0%;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="-250"
        class="emotion-2 emotion-3"
        role="progressbar"
      >
        <div
          class="emotion-4 emotion-5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar > renders correctly when value > 100 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  overflow: hidden;
  position: relative;
  height: 0.25rem;
  margin-left: 0;
  margin-right: 0;
  border-radius: 0.25rem;
  background-color: #e9eaeb;
  width: 100%;
}

.emotion-4 {
  border-radius: 0.25rem;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #8c40ef;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="250"
        class="emotion-2 emotion-3"
        role="progressbar"
      >
        <div
          class="emotion-4 emotion-5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar > renders correctly with label, labelDescription and showProgress, direction column 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-7 {
  color: #3f4250;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: text;
}

.emotion-9 {
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11 {
  color: #3f4250;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
}

.emotion-13 {
  overflow: hidden;
  position: relative;
  height: 0.25rem;
  margin-left: 0;
  margin-right: 0;
  border-radius: 0.25rem;
  background-color: #e9eaeb;
  width: 100%;
}

.emotion-15 {
  border-radius: 0.25rem;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #8c40ef;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <label
            class="emotion-6 emotion-7 emotion-8"
          >
            Label
          </label>
          <span
            class="emotion-9 emotion-8"
          >
            Label
          </span>
        </div>
        <label
          class="emotion-11 emotion-8"
        >
          40%
        </label>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="emotion-13 emotion-14"
        role="progressbar"
      >
        <div
          class="emotion-15 emotion-16"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar > renders correctly with label, labelDescription and showProgress, direction row 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-5 {
  color: #3f4250;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: text;
}

.emotion-7 {
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 {
  overflow: hidden;
  position: relative;
  height: 0.25rem;
  margin-left: 0;
  margin-right: 0;
  border-radius: 0.25rem;
  background-color: #e9eaeb;
  width: 100%;
}

.emotion-11 {
  border-radius: 0.25rem;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #8c40ef;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-16 {
  color: #3f4250;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <label
          class="emotion-4 emotion-5 emotion-6"
        >
          Label
        </label>
        <span
          class="emotion-7 emotion-6"
        >
          Label
        </span>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="emotion-9 emotion-10"
        role="progressbar"
      >
        <div
          class="emotion-11 emotion-12"
        />
      </div>
      <div
        class="emotion-13 emotion-14"
      >
        <label
          class="emotion-15 emotion-16 emotion-6"
        >
          40%
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar > renders correctly with label, labelDescription as ReactNode, direction column 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-7 {
  color: #3f4250;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: text;
}

.emotion-9 {
  overflow: hidden;
  position: relative;
  height: 0.25rem;
  margin-left: 0;
  margin-right: 0;
  border-radius: 0.25rem;
  background-color: #e9eaeb;
  width: 100%;
}

.emotion-11 {
  border-radius: 0.25rem;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #8c40ef;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <label
            class="emotion-6 emotion-7 emotion-8"
          >
            Label
          </label>
          <div>
            Label
          </div>
        </div>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="emotion-9 emotion-10"
        role="progressbar"
      >
        <div
          class="emotion-11 emotion-12"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar > renders correctly with label, labelDescription as ReactNode, direction row 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-5 {
  color: #3f4250;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: text;
}

.emotion-7 {
  overflow: hidden;
  position: relative;
  height: 0.25rem;
  margin-left: 0;
  margin-right: 0;
  border-radius: 0.25rem;
  background-color: #e9eaeb;
  width: 100%;
}

.emotion-9 {
  border-radius: 0.25rem;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #8c40ef;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <label
          class="emotion-4 emotion-5 emotion-6"
        >
          Label
        </label>
        <div>
          Label
        </div>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="emotion-7 emotion-8"
        role="progressbar"
      >
        <div
          class="emotion-9 emotion-10"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar > renders correctly with max 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-3 {
  color: #3f4250;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: text;
}

.emotion-5 {
  overflow: hidden;
  position: relative;
  height: 0.25rem;
  margin-left: 0;
  margin-right: 0;
  border-radius: 0.25rem;
  background-color: #e9eaeb;
  width: 100%;
}

.emotion-7 {
  border-radius: 0.25rem;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #8c40ef;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <label
        class="emotion-2 emotion-3 emotion-4"
      >
        label
      </label>
      <div
        aria-valuemax="10"
        aria-valuemin="0"
        aria-valuenow="4"
        class="emotion-5 emotion-6"
        role="progressbar"
      >
        <div
          class="emotion-7 emotion-8"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar > renders correctly with only label, direction column 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.emotion-5 {
  color: #3f4250;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: text;
}

.emotion-7 {
  overflow: hidden;
  position: relative;
  height: 0.25rem;
  margin-left: 0;
  margin-right: 0;
  border-radius: 0.25rem;
  background-color: #e9eaeb;
  width: 100%;
}

.emotion-9 {
  border-radius: 0.25rem;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #8c40ef;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <label
          class="emotion-4 emotion-5 emotion-6"
        >
          label
        </label>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="emotion-7 emotion-8"
        role="progressbar"
      >
        <div
          class="emotion-9 emotion-10"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar > renders correctly with only showProgress, direction column 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: right;
  -ms-flex-pack: right;
  -webkit-justify-content: right;
  justify-content: right;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.emotion-5 {
  color: #3f4250;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: text;
}

.emotion-7 {
  color: #3f4250;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
}

.emotion-9 {
  overflow: hidden;
  position: relative;
  height: 0.25rem;
  margin-left: 0;
  margin-right: 0;
  border-radius: 0.25rem;
  background-color: #e9eaeb;
  width: 100%;
}

.emotion-11 {
  border-radius: 0.25rem;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #8c40ef;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <label
          class="emotion-4 emotion-5 emotion-6"
        />
        <label
          class="emotion-7 emotion-6"
        >
          40%
        </label>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="emotion-9 emotion-10"
        role="progressbar"
      >
        <div
          class="emotion-11 emotion-12"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar > renders correctly with only showProgress, direction row 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  overflow: hidden;
  position: relative;
  height: 0.25rem;
  margin-left: 0;
  margin-right: 0;
  border-radius: 0.25rem;
  background-color: #e9eaeb;
  width: 100%;
}

.emotion-4 {
  border-radius: 0.25rem;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #8c40ef;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-9 {
  color: #3f4250;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="emotion-2 emotion-3"
        role="progressbar"
      >
        <div
          class="emotion-4 emotion-5"
        />
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <label
          class="emotion-8 emotion-9 emotion-10"
        >
          40%
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar > renders correctly with suffix and prefix, direction column 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.emotion-5 {
  color: #3f4250;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: text;
}

.emotion-7 {
  color: #3f4250;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
}

.emotion-9 {
  overflow: hidden;
  position: relative;
  height: 0.25rem;
  margin-left: 0;
  margin-right: 0;
  border-radius: 0.25rem;
  background-color: #e9eaeb;
  width: 100%;
}

.emotion-11 {
  border-radius: 0.25rem;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #8c40ef;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <label
          class="emotion-4 emotion-5 emotion-6"
        >
          label
        </label>
        <label
          class="emotion-7 emotion-6"
        >
          prefix40suffix
        </label>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="emotion-9 emotion-10"
        role="progressbar"
      >
        <div
          class="emotion-11 emotion-12"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar > renders correctly with suffix and prefix, direction row 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-3 {
  color: #3f4250;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: text;
}

.emotion-5 {
  overflow: hidden;
  position: relative;
  height: 0.25rem;
  margin-left: 0;
  margin-right: 0;
  border-radius: 0.25rem;
  background-color: #e9eaeb;
  width: 100%;
}

.emotion-7 {
  border-radius: 0.25rem;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #8c40ef;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-12 {
  color: #3f4250;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <label
        class="emotion-2 emotion-3 emotion-4"
      >
        label
      </label>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="emotion-5 emotion-6"
        role="progressbar"
      >
        <div
          class="emotion-7 emotion-8"
        />
      </div>
      <div
        class="emotion-9 emotion-10"
      >
        <label
          class="emotion-11 emotion-12 emotion-4"
        >
          prefix40suffix
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar > renders danger 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  overflow: hidden;
  position: relative;
  height: 0.25rem;
  margin-left: 0;
  margin-right: 0;
  border-radius: 0.25rem;
  background-color: #e9eaeb;
  width: 100%;
}

.emotion-4 {
  border-radius: 0.25rem;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #e51963;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="emotion-2 emotion-3"
        role="progressbar"
      >
        <div
          class="emotion-4 emotion-5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar > renders info 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  overflow: hidden;
  position: relative;
  height: 0.25rem;
  margin-left: 0;
  margin-right: 0;
  border-radius: 0.25rem;
  background-color: #e9eaeb;
  width: 100%;
}

.emotion-4 {
  border-radius: 0.25rem;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #0078d2;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="emotion-2 emotion-3"
        role="progressbar"
      >
        <div
          class="emotion-4 emotion-5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar > renders primary 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  overflow: hidden;
  position: relative;
  height: 0.25rem;
  margin-left: 0;
  margin-right: 0;
  border-radius: 0.25rem;
  background-color: #e9eaeb;
  width: 100%;
}

.emotion-4 {
  border-radius: 0.25rem;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #8c40ef;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="emotion-2 emotion-3"
        role="progressbar"
      >
        <div
          class="emotion-4 emotion-5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar > renders progression 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  overflow: hidden;
  position: relative;
  height: 0.25rem;
  margin-left: 0;
  margin-right: 0;
  border-radius: 0.25rem;
  background-color: #e9eaeb;
  width: 100%;
}

.emotion-4 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="emotion-2 emotion-3"
        role="progressbar"
      >
        <div
          class="emotion-4 emotion-5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar > renders success 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  overflow: hidden;
  position: relative;
  height: 0.25rem;
  margin-left: 0;
  margin-right: 0;
  border-radius: 0.25rem;
  background-color: #e9eaeb;
  width: 100%;
}

.emotion-4 {
  border-radius: 0.25rem;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #2c8564;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="emotion-2 emotion-3"
        role="progressbar"
      >
        <div
          class="emotion-4 emotion-5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar > renders warning 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  overflow: hidden;
  position: relative;
  height: 0.25rem;
  margin-left: 0;
  margin-right: 0;
  border-radius: 0.25rem;
  background-color: #e9eaeb;
  width: 100%;
}

.emotion-4 {
  border-radius: 0.25rem;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #fbc600;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="emotion-2 emotion-3"
        role="progressbar"
      >
        <div
          class="emotion-4 emotion-5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
